[gd_scene load_steps=43 format=3 uid="uid://c6uubfh172683"]

[ext_resource type="Script" uid="uid://cafxbpaqogk35" path="res://scripts/arcade_main.gd" id="1_wer3u"]
[ext_resource type="Script" uid="uid://u51sserba3tc" path="res://scripts/object_generation.gd" id="2_8hgfh"]
[ext_resource type="Script" uid="uid://dltuvs015dqlb" path="res://scripts/cam_guide.gd" id="3_utn3h"]
[ext_resource type="Script" uid="uid://11hk1me442cd" path="res://scripts/player_object.gd" id="4_cmngb"]
[ext_resource type="Texture2D" uid="uid://cpx0p2r26sa06" path="res://sprites/player_anim0000.png" id="5_0ukt7"]
[ext_resource type="Texture2D" uid="uid://ph1epmacmkby" path="res://sprites/grid_2.png" id="6_8hgfh"]
[ext_resource type="FontFile" uid="uid://qdr87ip5vrhv" path="res://fonts/latinmodern-math.otf" id="6_cmngb"]
[ext_resource type="Texture2D" uid="uid://di155c1uocoxd" path="res://sprites/player_anim0001.png" id="6_sktuj"]
[ext_resource type="Texture2D" uid="uid://cscm6unj1ieo1" path="res://sprites/circle_05.png" id="7_sktuj"]
[ext_resource type="Script" uid="uid://bqeqeb3snc5k1" path="res://scripts/fx_controller.gd" id="7_utn3h"]
[ext_resource type="Texture2D" uid="uid://bm0kcg2fpkxd2" path="res://sprites/smoke_05.png" id="11_m2wjg"]
[ext_resource type="AudioStream" uid="uid://b6cdcg3uehpdp" path="res://audio/explosion.wav" id="12_iwdyi"]
[ext_resource type="Script" uid="uid://f87dsgynata6" path="res://scripts/audio_controller.gd" id="12_xwleh"]
[ext_resource type="AudioStream" uid="uid://bc1pqplboi2g" path="res://audio/pickup_coin.wav" id="14_n02mf"]
[ext_resource type="AudioStream" uid="uid://cob8p0m0506f2" path="res://audio/background_music.mp3" id="15_fgq0x"]

[sub_resource type="Curve" id="Curve_658re"]
_data = [Vector2(0, 0), 0.0, 5.515918, 0, 0, Vector2(0.14765102, 0.6629214), 1.6741576, 1.6741576, 0, 0, Vector2(0.83221483, 1), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_658re"]
friction = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_4ltp0"]
radius = 15.0

[sub_resource type="CircleShape2D" id="CircleShape2D_8hgfh"]
radius = 23.2

[sub_resource type="Animation" id="Animation_iwdyi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_0ukt7")]
}

[sub_resource type="Animation" id="Animation_xwleh"]
resource_name = "player_down"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_sktuj")]
}

[sub_resource type="Animation" id="Animation_m2wjg"]
resource_name = "player_up"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_0ukt7")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n02mf"]
_data = {
&"RESET": SubResource("Animation_iwdyi"),
&"player_down": SubResource("Animation_xwleh"),
&"player_up": SubResource("Animation_m2wjg")
}

[sub_resource type="Curve" id="Curve_m2wjg"]
_data = [Vector2(0, 0.11235964), 0.0, 3.2159803, 0, 0, Vector2(0.5031056, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.13483155), -3.3164823, 0.0, 0, 0]
point_count = 3

[sub_resource type="LabelSettings" id="LabelSettings_0ukt7"]
resource_local_to_scene = true
font = ExtResource("6_cmngb")
font_size = 40
font_color = Color(0.11, 0.11, 0.11, 1)
outline_size = 3
outline_color = Color(0.8784314, 0.8784314, 0.8784314, 1)

[sub_resource type="LabelSettings" id="LabelSettings_sktuj"]
resource_local_to_scene = true
font = ExtResource("6_cmngb")
font_size = 25
font_color = Color(0.11, 0.11, 0.11, 1)
outline_size = 3
outline_color = Color(0.8784314, 0.8784314, 0.8784314, 1)

[sub_resource type="LabelSettings" id="LabelSettings_4ltp0"]
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xwleh"]
bg_color = Color(1, 0.17000002, 0.17000002, 0.8392157)
border_width_bottom = 885
border_color = Color(0.79, 0.33127335, 0.2607, 0.34509805)
border_blend = true
corner_detail = 12

[sub_resource type="LabelSettings" id="LabelSettings_m2wjg"]
resource_local_to_scene = true
font = ExtResource("6_cmngb")
font_size = 75
font_color = Color(0.88, 0.88, 0.88, 1)
outline_color = Color(0.83, 0.83, 0.83, 1)

[sub_resource type="LabelSettings" id="LabelSettings_iwdyi"]
resource_local_to_scene = true
font = ExtResource("6_cmngb")
font_size = 30
font_color = Color(0.88, 0.88, 0.88, 1)
outline_color = Color(0.83, 0.83, 0.83, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0ukt7"]
bg_color = Color(0.81, 0.18360002, 0.16199999, 1)
border_color = Color(0.20300001, 0.7, 0.27754995, 1)
corner_radius_top_right = 15
corner_radius_bottom_right = 15
expand_margin_right = 10.0
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sktuj"]
bg_color = Color(0.63, 0.28287, 0.2709, 1)
border_color = Color(0.20300001, 0.7, 0.27754995, 1)
corner_radius_top_right = 15
corner_radius_bottom_right = 15
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m2wjg"]
bg_color = Color(0.37694997, 0.7, 0.20300001, 1)
border_color = Color(0.20300001, 0.7, 0.27754995, 1)
corner_radius_top_left = 15
corner_radius_bottom_left = 15
expand_margin_left = 10.0
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iwdyi"]
bg_color = Color(0.36745498, 0.51, 0.2907, 1)
border_color = Color(0.20300001, 0.7, 0.27754995, 0)
corner_radius_top_left = 15
corner_radius_bottom_left = 15
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="InputEventKey" id="InputEventKey_xwleh"]
device = -1
keycode = 4194309

[sub_resource type="Shortcut" id="Shortcut_n02mf"]
events = [SubResource("InputEventKey_xwleh")]

[sub_resource type="LabelSettings" id="LabelSettings_fgq0x"]
font = ExtResource("6_cmngb")
font_size = 24

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cmngb"]
bg_color = Color(0.5544, 0.64548004, 0.72, 0.5686275)
border_width_left = 70
border_width_top = 120
border_width_right = 70
border_width_bottom = 120
border_color = Color(0.8, 0.8, 0.8, 0)
border_blend = true
corner_radius_top_left = 600
corner_radius_top_right = 600
corner_radius_bottom_right = 600
corner_radius_bottom_left = 600

[sub_resource type="LabelSettings" id="LabelSettings_cmngb"]
resource_local_to_scene = true
font = ExtResource("6_cmngb")
font_size = 65
outline_color = Color(0.8784314, 0.8784314, 0.8784314, 1)

[sub_resource type="Curve" id="Curve_0ukt7"]
_data = [Vector2(0, 1), 0.0, 0.033483136, 0, 0, Vector2(0.5838926, 0.21348321), -1.0044945, -1.0044945, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_0ukt7"]
offsets = PackedFloat32Array(0, 0.15447155, 1)
colors = PackedColorArray(0.98, 0.98, 0.98, 0.6745098, 0.94, 0.94, 0.94, 0.41568628, 1, 1, 1, 0)

[sub_resource type="Gradient" id="Gradient_iwdyi"]
colors = PackedColorArray(1, 1, 1, 0.8627451, 1, 1, 1, 0.42352942)

[node name="Arcade" type="Node2D" node_paths=PackedStringArray("player", "cam_guide", "cam", "obj_generator", "sin_label", "score_label", "top_score_label", "dist_traveled_label", "player_start_node", "fx_controller", "audio_controller", "line")]
script = ExtResource("1_wer3u")
player = NodePath("PlayerObject")
cam_guide = NodePath("CamGuide")
cam = NodePath("CamGuide/MainCam")
obj_generator = NodePath("ObjectGeneration")
sin_label = NodePath("CanvasLayer/SinFunc")
score_label = NodePath("CanvasLayer/Score")
top_score_label = NodePath("CanvasLayer/TopScore")
dist_traveled_label = NodePath("CanvasLayer/DistanceTraveled")
player_start_node = NodePath("InitialPlayerPosition")
fx_controller = NodePath("FXController")
audio_controller = NodePath("AudioController")
line = NodePath("SinWave")
a_var = 100.0
b_var = 0.008
min_control_speed = 250.0
max_control_speed = 500.0
v_move_curve = SubResource("Curve_658re")
v_up_multiplier = 0.3
v_down_multiplier = 1.8
h_move_control_lerp_time = 0.6

[node name="InitialPlayerPosition" type="Node2D" parent="."]
position = Vector2(0, -49)

[node name="ObjectGeneration" type="Node2D" parent="." node_paths=PackedStringArray("game_node", "cam", "player")]
script = ExtResource("2_8hgfh")
game_node = NodePath("..")
cam = NodePath("../CamGuide/MainCam")
player = NodePath("../PlayerObject")
spawn_separation_dist = 1200
max_spawn_y = -1700.0
min_spawn_y = 100.0

[node name="ZeroSpawn" type="Node2D" parent="ObjectGeneration"]

[node name="CamGuide" type="Node2D" parent="." node_paths=PackedStringArray("game_node", "player", "cam")]
position = Vector2(278, -169)
script = ExtResource("3_utn3h")
game_node = NodePath("..")
player = NodePath("../PlayerObject")
cam = NodePath("MainCam")
min_zoom = Vector2(0.7, 7)

[node name="MainCam" type="Camera2D" parent="CamGuide"]
offset = Vector2(300, 0)
zoom = Vector2(0.555, 0.555)
limit_enabled = false
position_smoothing_speed = 2.0

[node name="PlayerObject" type="RigidBody2D" parent="." node_paths=PackedStringArray("game_node", "anim_player")]
z_index = 2
position = Vector2(279, -364)
collision_mask = 2
mass = 0.1
physics_material_override = SubResource("PhysicsMaterial_658re")
gravity_scale = 0.5
lock_rotation = true
continuous_cd = 1
contact_monitor = true
max_contacts_reported = 3
script = ExtResource("4_cmngb")
game_node = NodePath("..")
anim_player = NodePath("AnimationPlayer")
col_impulse_mult = 40.0
col_force_mult = 190.0
downhill_force_mult = 1.4
max_velocity = 20000.0
rebound_force = 18.0
height_to_reach = Array[float]([-1000.0, -2000.0, -2950.0])
points_per_height = Array[int]([10, 30, 50])

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerObject"]
z_index = 2
shape = SubResource("CircleShape2D_4ltp0")

[node name="Sprite2D" type="Sprite2D" parent="PlayerObject"]
z_index = 2
scale = Vector2(0.471, 0.471)
texture = ExtResource("5_0ukt7")
region_rect = Rect2(3.105, 0, 115.895, 127.5)

[node name="Area2D" type="Area2D" parent="PlayerObject"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerObject/Area2D"]
shape = SubResource("CircleShape2D_8hgfh")
debug_color = Color(0.66528, 0.5147997, 1.92523e-07, 0.41960785)

[node name="AnimationPlayer" type="AnimationPlayer" parent="PlayerObject"]
libraries = {
&"": SubResource("AnimationLibrary_n02mf")
}

[node name="SinWave" type="Line2D" parent="."]
points = PackedVector2Array(-712, -55.401997, -707, -58.68681, -702, -61.87773, -697, -64.969666, -692, -67.95766, -687, -70.83694, -682, -73.60289, -677, -76.25109, -672, -78.77731, -667, -81.177505, -662, -83.44783, -657, -85.584656, -652, -87.584564, -647, -89.44436, -642, -91.16106, -637, -92.73192, -632, -94.15443, -627, -95.426315, -622, -96.54553, -617, -97.51031, -612, -98.31908, -607, -98.970566, -602, -99.463715, -597, -99.79775, -592, -99.97213, -587, -99.98657, -582, -99.84106, -577, -99.53582, -572, -99.07134, -567, -98.44837, -562, -97.667915, -557, -96.7312, -552, -95.63974, -547, -94.39527, -542, -92.9998, -537, -91.45554, -532, -89.76498, -527, -87.9308, -522, -85.95596, -517, -83.84361, -512, -81.59713, -507, -79.22011, -502, -76.71635, -497, -74.08986, -492, -71.34485, -487, -68.485695, -482, -65.51698, -477, -62.44345, -472, -59.270027, -467, -56.001785, -462, -52.64395, -457, -49.201897, -452, -45.681133, -447, -42.087288, -442, -38.42611, -437, -34.70346, -432, -30.925293, -427, -27.09765, -422, -23.226658, -417, -19.318508, -412, -15.379453, -407, -11.415792, -402, -7.433871, -397, -3.4400558, -392, 0.55926245, -387, 4.557686, -382, 8.548819, -377, 12.526274, -372, 16.48369, -367, 20.414738, -362, 24.313124, -357, 28.172615, -352, 31.987036, -347, 35.750286, -342, 39.45634, -337, 43.099274, -332, 46.67326, -327, 50.172577, -322, 53.591625, -317, 56.924942, -312, 60.16719, -307, 63.313187, -302, 66.357895, -297, 69.29644, -292, 72.12413, -287, 74.83643, -282, 77.429016, -277, 79.89773, -272, 82.238625, -267, 84.44795, -262, 86.52219, -257, 88.458, -252, 90.2523, -247, 91.902214, -242, 93.405106, -237, 94.75857, -232, 95.960434, -227, 97.00879, -222, 97.90195, -217, 98.63849, -212, 99.217224, -207, 99.63724, -202, 99.89785, -197, 99.99865, -192, 99.93947, -187, 99.720406, -182, 99.34181, -177, 98.8043, -172, 98.10871, -167, 97.25617, -162, 96.24805, -157, 95.085945, -152, 93.77173, -147, 92.307495, -142, 90.69559, -137, 88.93858, -132, 87.0393, -127, 85.00078, -122, 82.82626, -117, 80.51925, -112, 78.08342, -107, 75.522675, -102, 72.84111, -97, 70.043015, -92, 67.132866, -87, 64.11532, -82, 60.995197, -77, 57.7775, -72, 54.467373, -67, 51.070107, -62, 47.591137, -57, 44.036034, -52, 40.410484, -47, 36.720284, -42, 32.97134, -37, 29.169651, -32, 25.321295, -27, 21.43243, -22, 17.509277, -17, 13.558114, -12, 9.585261, -7, 5.5970736, -2, 1.5999317, 3, -2.3997695, 8, -6.395632, 13, -10.381263, 18, -14.350286, 23, -18.29635, 28, -22.213146, 33, -26.094404, 38, -29.933918, 43, -33.725544, 48, -37.463215, 53, -41.140953, 58, -44.752876, 63, -48.2932, 68, -51.75627, 73, -55.13654, 78, -58.4286, 83, -61.62719, 88, -64.72719, 93, -67.72364, 98, -70.61175, 103, -73.38689, 108, -76.044624, 113, -78.58071, 118, -80.99108, 123, -83.27188, 128, -85.419464, 133, -87.4304, 138, -89.30146, 143, -91.02966, 148, -92.61223, 153, -94.04664, 158, -95.3306, 163, -96.46204, 168, -97.43918, 173, -98.26042, 178, -98.92448, 183, -99.43027, 188, -99.77699, 193, -99.9641, 198, -99.99128, 203, -99.858505, 208, -99.56597, 213, -99.11415, 218, -98.50377, 223, -97.73581, 228, -96.811485, 233, -95.732285, 238, -94.49994, 243, -93.11641, 248, -91.58391, 253, -89.9049, 258, -88.08206, 263, -86.11831, 268, -84.016785, 273, -81.78085, 278, -79.41409, 283, -76.92028, 288, -74.30341, 293, -71.56768, 298, -68.71745, 303, -65.75729, 308, -62.691933, 313, -59.52628, 318, -56.265396, 323, -52.9145, 328, -49.478954, 333, -45.964252, 338, -42.37602, 343, -38.71999, 348, -35.002018, 353, -31.228052, 358, -27.404125, 363, -23.53636, 368, -19.63094, 373, -15.694115, 378, -11.7321825, 383, -7.7514815, 388, -3.75838, 393, 0.24073441, 398, 4.239464, 403, 8.231411, 408, 12.210189, 413, 16.169434, 418, 20.102812, 423, 24.004028, 428, 27.866844, 433, 31.685078, 438, 35.452625, 443, 39.163452, 448, 42.811626, 453, 46.391315, 458, 49.896782, 463, 53.32243, 468, 56.66277, 473, 59.912464, 478, 63.066307, 483, 66.11926, 488, 69.06644, 493, 71.90312, 498, 74.62478, 503, 77.22705, 508, 79.70577, 513, 82.056984, 518, 84.276924, 523, 86.36204, 528, 88.30899, 533, 90.11467, 538, 91.77618, 543, 93.29087, 548, 94.65632, 553, 95.87033, 558, 96.93098, 563, 97.83655, 568, 98.5856, 573, 99.17695, 578, 99.60963, 583, 99.88295, 588, 99.99648, 593, 99.95004, 598, 99.743706, 603, 99.37779, 608, 98.852905, 613, 98.16987, 618, 97.32979, 623, 96.33399, 628, 95.18409, 633, 93.881905, 638, 92.429535, 643, 90.8293, 648, 89.083755, 653, 87.195694, 658, 85.16814, 663, 83.004326, 668, 80.70773, 673, 78.28202, 678, 75.73108, 683, 73.058975, 688, 70.270004, 693, 67.36861, 698, 64.359436, 703, 61.247303, 708, 58.03719, 713, 54.73423, 718, 51.343704, 723, 47.87104, 728, 44.321796, 733, 40.701645, 738, 37.016376, 743, 33.271893, 748, 29.47418, 753, 25.629316, 758, 21.74345, 763, 17.822798, 768, 13.873634, 773, 9.902276, 778, 5.915076, 783, 1.918413, 788, -2.081319, 793, -6.077721, 798, -10.064401, 803, -14.034979, 808, -17.983105, 813, -21.90246, 818, -25.786777, 823, -29.62984, 828, -33.425503, 833, -37.167694, 838, -40.85042, 843, -44.467796, 848, -48.014034, 853, -51.48346, 858, -54.87052, 863, -58.169804, 868, -61.376026, 873, -64.48406, 878, -67.48893, 883, -70.38583, 888, -73.170135, 893, -75.83739, 898, -78.38331, 903, -80.80383, 908, -83.09509, 913, -85.25341, 918, -87.275345, 923, -89.15766, 928, -90.89734, 933, -92.49161, 938, -93.937904, 943, -95.23392, 948, -96.37758, 953, -97.36706, 958, -98.20077, 963, -98.87738, 968, -99.39581, 973, -99.755226, 978, -99.955055, 983, -99.99498, 988, -99.87493, 993, -99.59511, 998, -99.15595, 1003, -98.55817, 1008, -97.80271, 1013, -96.890785, 1018, -95.82386, 1023, -94.60364, 1028, -93.23207, 1033, -91.71135, 1038, -90.043915, 1043, -88.23242, 1048, -86.27978, 1053, -84.18911, 1058, -81.96375, 1063, -79.60727, 1068, -77.123436, 1073, -74.51621, 1078, -71.78979, 1083, -68.94852, 1088, -65.99693, 1093, -62.939777, 1098, -59.781925, 1103, -56.52844, 1108, -53.184517, 1113, -49.755512, 1118, -46.24691, 1123, -42.664318, 1128, -39.013477, 1133, -35.30022, 1138, -31.530493, 1143, -27.710323, 1148, -23.845821, 1153, -19.943172, 1158, -16.008617, 1163, -12.048453, 1168, -8.069015, 1173, -4.076666, 1178, -0.07779607, 1183, 3.9211984, 1188, 7.91392, 1193, 11.89398, 1198, 15.855014, 1203, 19.790682, 1208, 23.694689, 1213, 27.560791, 1218, 31.3828, 1223, 35.154602, 1228, 38.870167, 1233, 42.52355, 1238, 46.1089, 1243, 49.620487, 1248, 53.052692, 1253, 56.40002, 1258, 59.657127, 1263, 62.81879, 1268, 65.87996, 1273, 68.83573, 1278, 71.68139, 1283, 74.41236, 1288, 77.0243, 1293, 79.51301, 1298, 81.87451, 1303, 84.10504, 1308, 86.20101, 1313, 88.15909, 1318, 89.97612, 1323, 91.649216, 1328, 93.17569, 1333, 94.5531, 1338, 95.77925, 1343, 96.85217, 1348, 97.77015, 1353, 98.53172, 1358, 99.13566, 1363, 99.581, 1368, 99.867035, 1373, 99.9933, 1378, 99.9596, 1383, 99.76599, 1388, 99.412766, 1393, 98.90051, 1398, 98.230034, 1403, 97.40241, 1408, 96.41896, 1413, 95.281265, 1418, 93.991135, 1423, 92.550644, 1428, 90.96209, 1433, 89.22801, 1438, 87.3512, 1443, 85.33463, 1448, 83.18155, 1453, 80.8954, 1458, 78.47983)
width = 9.975
width_curve = SubResource("Curve_m2wjg")
default_color = Color(0.07199998, 0.1933332, 0.8, 1)

[node name="WaveCollision" type="RigidBody2D" parent="."]
position = Vector2(1, 0)
collision_layer = 4
gravity_scale = 0.0
lock_rotation = true
freeze = true
continuous_cd = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="SinFunc" type="Label" parent="CanvasLayer"]
z_index = 2
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 27.0
offset_top = -69.0
offset_right = 435.0
offset_bottom = 14.0
grow_vertical = 0
text = "f(x) = Asin(b(x+c))+d"
label_settings = SubResource("LabelSettings_0ukt7")

[node name="Score" type="Label" parent="CanvasLayer"]
offset_left = 27.0
offset_top = 82.0
offset_right = 159.0
offset_bottom = 123.0
text = "Score: _"
label_settings = SubResource("LabelSettings_sktuj")

[node name="TopScore" type="Label" parent="CanvasLayer"]
offset_left = 27.0
offset_top = 125.0
offset_right = 243.0
offset_bottom = 166.0
text = "Top Score: _"
label_settings = SubResource("LabelSettings_sktuj")

[node name="DistanceTraveled" type="Label" parent="CanvasLayer"]
offset_left = 27.0
offset_top = 41.0
offset_right = 417.0
offset_bottom = 82.0
text = "Distance Traveled: _m"
label_settings = SubResource("LabelSettings_sktuj")

[node name="DEBUG" type="Control" parent="CanvasLayer"]
visible = false
z_index = 5
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.0
offset_top = 254.0
offset_right = -45.0
offset_bottom = 294.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Get slope" type="LineEdit" parent="CanvasLayer/DEBUG"]
z_index = 5
layout_mode = 0
offset_left = 581.0
offset_top = 17.0
offset_right = 649.5625
offset_bottom = 48.0
text = "x?"

[node name="slope at x" type="Label" parent="CanvasLayer/DEBUG"]
layout_mode = 0
offset_left = 514.0
offset_top = 23.0
offset_right = 554.0
offset_bottom = 46.0

[node name="PlayerPos" type="Label" parent="CanvasLayer/DEBUG"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 424.0
offset_top = -527.0
offset_right = 496.0
offset_bottom = -504.0
grow_horizontal = 0
text = "Pos: (x, y)"
label_settings = SubResource("LabelSettings_4ltp0")

[node name="EndGameScreen" type="Panel" parent="CanvasLayer"]
z_index = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_xwleh")

[node name="GameOver" type="Label" parent="CanvasLayer/EndGameScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.5
offset_top = -100.0
offset_right = 240.5
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
rotation = 0.029670598
text = "GAME OVER"
label_settings = SubResource("LabelSettings_m2wjg")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="Label" parent="CanvasLayer/EndGameScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = 12.0
offset_right = 147.0
offset_bottom = 57.0
grow_horizontal = 2
grow_vertical = 2
text = "Score: __"
label_settings = SubResource("LabelSettings_iwdyi")
horizontal_alignment = 1
vertical_alignment = 1

[node name="DistanceTraveled" type="Label" parent="CanvasLayer/EndGameScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -224.0
offset_top = 52.0
offset_right = 212.0
offset_bottom = 99.0
grow_horizontal = 2
grow_vertical = 2
text = "Distance Traveled: _m"
label_settings = SubResource("LabelSettings_iwdyi")
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuitToMenu" type="Button" parent="CanvasLayer/EndGameScreen"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_top = -160.0
offset_right = 192.0
offset_bottom = -104.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("6_cmngb")
theme_override_font_sizes/font_size = 31
theme_override_styles/normal = SubResource("StyleBoxFlat_0ukt7")
theme_override_styles/hover = SubResource("StyleBoxFlat_sktuj")
text = "Quit"

[node name="PlayAgain" type="Button" parent="CanvasLayer/EndGameScreen"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -192.0
offset_top = -160.0
offset_bottom = -104.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("6_cmngb")
theme_override_font_sizes/font_size = 31
theme_override_styles/normal = SubResource("StyleBoxFlat_m2wjg")
theme_override_styles/hover = SubResource("StyleBoxFlat_iwdyi")
shortcut = SubResource("Shortcut_n02mf")
text = "Play Again
"

[node name="Enter" type="Label" parent="CanvasLayer/EndGameScreen/PlayAgain"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -72.0
offset_right = 72.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 0
text = "(Press Enter)"
label_settings = SubResource("LabelSettings_fgq0x")
horizontal_alignment = 1

[node name="StartScreen" type="Panel" parent="CanvasLayer"]
visible = false
z_index = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cmngb")

[node name="Label" type="Label" parent="CanvasLayer/StartScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Press Any Key to Start"
label_settings = SubResource("LabelSettings_cmngb")

[node name="ParalaxBackgrounds" type="Node2D" parent="."]
position = Vector2(574, 325)

[node name="Parallax2D" type="Parallax2D" parent="ParalaxBackgrounds"]
z_index = -4
scale = Vector2(2, 2)
repeat_size = Vector2(100, 100)
repeat_times = 50

[node name="Sprite2D" type="Sprite2D" parent="ParalaxBackgrounds/Parallax2D"]
modulate = Color(0.4, 0.4, 0.4, 1)
texture = ExtResource("6_8hgfh")

[node name="Parallax2D2" type="Parallax2D" parent="ParalaxBackgrounds"]
z_index = -5
scale = Vector2(0.5, 0.5)
scroll_scale = Vector2(0.4, 0.4)
scroll_offset = Vector2(32, -16)
repeat_size = Vector2(100, 100)
repeat_times = 201

[node name="Sprite2D" type="Sprite2D" parent="ParalaxBackgrounds/Parallax2D2"]
modulate = Color(0.61, 0.61, 0.61, 1)
texture = ExtResource("6_8hgfh")

[node name="FXController" type="Node" parent="." node_paths=PackedStringArray("text_pop_ups_node", "player_particles_node")]
script = ExtResource("7_utn3h")
text_pop_ups_node = NodePath("TextPopUps")
player_particles_node = NodePath("PlayerParticles")

[node name="TextPopUps" type="Node2D" parent="FXController"]

[node name="PlayerParticles" type="Node2D" parent="FXController"]

[node name="Trail" type="CPUParticles2D" parent="FXController/PlayerParticles"]
z_index = 1
emitting = false
amount = 82
texture = ExtResource("7_sktuj")
lifetime = 4.0
speed_scale = 2.0
spread = 0.0
gravity = Vector2(0, 0)
scale_amount_min = 0.1
scale_amount_max = 0.1
scale_amount_curve = SubResource("Curve_0ukt7")
color_ramp = SubResource("Gradient_0ukt7")

[node name="Grind" type="CPUParticles2D" parent="FXController/PlayerParticles"]
z_index = 4
position = Vector2(0, 15)
emitting = false
amount = 82
texture = ExtResource("11_m2wjg")
lifetime = 1.5
explosiveness = 0.15
draw_order = 1
direction = Vector2(0, 1)
spread = 90.0
gravity = Vector2(0, -60)
initial_velocity_min = 52.0
initial_velocity_max = 52.25
scale_amount_min = 0.01
scale_amount_max = 0.1
color = Color(0.89599997, 0.87, 1, 1)
color_ramp = SubResource("Gradient_iwdyi")

[node name="AudioController" type="Node" parent="." node_paths=PackedStringArray("explosion", "point", "background")]
script = ExtResource("12_xwleh")
explosion = NodePath("Explosion")
point = NodePath("Point")
background = NodePath("Background")

[node name="Explosion" type="AudioStreamPlayer" parent="AudioController"]
stream = ExtResource("12_iwdyi")
volume_db = -21.454

[node name="Point" type="AudioStreamPlayer" parent="AudioController"]
stream = ExtResource("14_n02mf")
volume_db = -20.242

[node name="Background" type="AudioStreamPlayer" parent="AudioController"]
stream = ExtResource("15_fgq0x")
volume_db = -20.77
autoplay = true

[connection signal="body_entered" from="PlayerObject/Area2D" to="PlayerObject" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="PlayerObject/Area2D" to="PlayerObject" method="_on_area_2d_body_exited"]
[connection signal="pressed" from="CanvasLayer/EndGameScreen/QuitToMenu" to="." method="_on_quit_to_menu_pressed"]
[connection signal="pressed" from="CanvasLayer/EndGameScreen/PlayAgain" to="." method="_on_play_again_pressed"]
